--- a/Resources/Private/Messages/ComponentInquiry.html
+++ b/Resources/Private/Messages/ComponentInquiry.html
@@ -15,7 +15,10 @@
 		<th style="text-align: left; padding-right: 10px;">Telefon: </th><td> {clientPhone}</td>
 	</tr>
 	<tr>
-		<th style="text-align: left; padding-right: 10px;">Gewünschte Fläche in m² *: </th><td> {squareMeasure}</td>
+		<th style="text-align: left; padding-right: 10px;">Gewünschte Fläche *: </th><td> {squareMeasure} {unit}</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; padding-right: 10px;">Auswahl Farbmuster: </th><td> {colorSample}</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; padding-right: 10px;">Bemerkungen: </th><td> {clientMessage}</td>
